# eedft

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Project.toml  README.md  meson.build  sandbox.jl
codegen/: fdcoeffs.py
funcutils/: utils.hpp
funcutils/functor/: functor.hpp
funcutils/functor/impl/: optional.hpp  vector.hpp
include/eedft/core/: helpers.hpp  types.hpp
include/eedft/core/stencil/: data.hpp  helpers.hpp
include/eedft/stencil/: data.hpp
scripts/: fdcoeffs.sh
src/: EEDFT.jl  basis.jl  bivector.jl  fft.jl  kernel.c  main.cpp  main.rs  scalar_field.bak  scalar_field.jl  stencil.c  types.jl
src/atomistics/: atoms.jl  species.jl
src/core/: math.rs  stencils.rs
src/eedft/: kernel.h  stencil.h  wf_grid.h
src/terms/: bivector.jl
test/: runtests.jl  test_scalar_field.jl
tests/: CMakeLists.txt  test_kernel.cpp  test_stencil.cpp
